fixed alignment for phones

--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -6,7 +6,6 @@
   float: left;
   padding: 0 100px;
   position: relative;
-  margin-right: 60px;
   margin-top: 98px
 }
 
