--- a/assets/css/phone-animations.css
+++ b/assets/css/phone-animations.css
@@ -7,7 +7,6 @@
   -webkit-flex-shrink: 0;
   -ms-flex-shrink: 0;
   flex-shrink: 0;
-  width: 35%;
   min-width: 25rem;
   border-radius: 0;
   display: flex;
